--- a/demo2.html
+++ b/demo2.html
@@ -47,7 +47,7 @@ function x()
   }
   
   function DateDemo(){
-  var d, s="今天日期是：";
+  var d, s="今天日期是什么：";
   d = new Date();
   s += d.getMonth() + "/";
   s += d.getDate() + "/";
